<?xml version="1.0" encoding="utf-8"?>

<!--
    * Soubor:      fragment_new_manual_pattern_logged.xml
    * Autor:       Pavel Bobčík (xbobci03)
    * Předmět:     ITU - Tvorba uživatelských rozhraní
    * Organizace:  Vysoké učení technické v Brně
-->

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.NewManualPatternLogged"
android:background="@color/mainBackground"
android:orientation="vertical">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:layout_marginBottom="5dp">

        <ImageView
            style="@style/ImageButtons"
            android:id="@+id/btnCancel"
            android:src="@drawable/ic_cancel"/>

    <TextView
        style="@style/NavbarHeadline"
        android:text="Vytvoření vzoru"
        android:paddingStart="40dp"/>

    <ImageView
        style="@style/ImageButtons"
        android:id="@+id/btnSave"
        android:src="@drawable/avd_save"
        android:padding="8dp"/>

        <ImageView
            style="@style/ImageButtons"
            android:id="@+id/btnFinish"
            android:src="@drawable/avd_finish"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/patternExample"
                android:textColor="@color/description"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/tvPattern"
                android:layout_weight="1"
                android:textColor="@color/lightGray"
                android:text="@string/emptyPattern"
                android:textSize="25sp"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            style="@style/MyUnderline"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewOptionHeadline"
                    android:id="@+id/tvFirstOptionHeadline"
                    android:text="@string/everyFirst"/>

                <LinearLayout
                    style="@style/LayoutOptionButtons">

                    <TextView
                        style="@style/OptionButtons"
                        android:id="@+id/btnLetterFirst"
                        android:text="@string/letter"/>

                    <LinearLayout
                        style="@style/TabBarLineOptions"/>

                    <TextView
                        style="@style/OptionButtons"
                        android:id="@+id/btnNumberFirst"
                        android:text="@string/number"/>

                    <LinearLayout
                        style="@style/TabBarLineOptions"/>

                    <TextView
                        style="@style/OptionButtons"
                        android:id="@+id/btnSymbolFirst"
                        android:text="@string/symbol"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/LayoutOptionSetting">

                    <LinearLayout
                        style="@style/LayoutOptionSettingInfo">

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoFirstAtFirst"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoSecondAtFirst"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoThirdAtFirst"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoFourthAtFirst"/>

                    </LinearLayout>

                    <RadioGroup
                        style="@style/RadioGroupOptionSetting"
                        android:id="@+id/rGroupFirst">

                        <!-- https://stackoverflow.com/a/38681216 -->
                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnFirstAtFirst"
                            android:text="@string/letterFirst"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnSecondAtFirst"
                            android:text="@string/letterSecond"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnThirdAtFirst"
                            android:text="@string/letterThird"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnFourthAtFirst"
                            android:text="@string/letterFourth"/>

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/MyUnderline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/TextViewOptionHeadline"
                    android:id="@+id/tvSecondOptionHeadline"
                    android:text="@string/everySecond"/>

                <LinearLayout
                    style="@style/LayoutOptionButtons">

                    <TextView
                        style="@style/OptionButtons"
                        android:id="@+id/btnLetterSecond"
                        android:text="@string/letter"/>

                    <LinearLayout
                        style="@style/TabBarLineOptions"/>

                    <TextView
                        style="@style/OptionButtons"
                        android:id="@+id/btnNumberSecond"
                        android:text="@string/number"/>

                    <LinearLayout
                        style="@style/TabBarLineOptions"/>

                    <TextView
                        style="@style/OptionButtons"
                        android:id="@+id/btnSymbolSecond"
                        android:text="@string/symbol"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/LayoutOptionSetting">

                    <LinearLayout
                        style="@style/LayoutOptionSettingInfo">

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoFirstAtSecond"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoSecondAtSecond"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoThirdAtSecond"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoFourthAtSecond"/>

                    </LinearLayout>

                    <RadioGroup
                        style="@style/RadioGroupOptionSetting"
                        android:id="@+id/rGroupSecond">

                        <!-- https://stackoverflow.com/a/38681216 -->
                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnFirstAtSecond"
                            android:text="@string/numberFirst"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnSecondAtSecond"
                            android:text="@string/numberSecond"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnThirdAtSecond"
                            android:text="@string/numberThird"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnFourthAtSecond"
                            android:text="@string/numberFourth"/>

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/MyUnderline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/TextViewOptionHeadline"
                    android:id="@+id/tvThirdOptionHeadline"
                    android:text="@string/everyThird"/>

                <LinearLayout
                    style="@style/LayoutOptionButtons">

                    <TextView
                        style="@style/OptionButtons"
                        android:id="@+id/btnLetterThird"
                        android:text="@string/letter"/>

                    <LinearLayout
                        style="@style/TabBarLineOptions"/>

                    <TextView
                        style="@style/OptionButtons"
                        android:text="@string/number"
                        android:id="@+id/btnNumberThird"/>

                    <LinearLayout
                        style="@style/TabBarLineOptions"/>

                    <TextView
                        style="@style/OptionButtons"
                        android:id="@+id/btnSymbolThird"
                        android:text="@string/symbol"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/LayoutOptionSetting">

                    <LinearLayout
                        style="@style/LayoutOptionSettingInfo">

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoFirstAtThird"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoSecondAtThird"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoThirdAtThird"/>

                        <ImageView
                            style="@style/infoButton"
                            android:id="@+id/btnInfoFourthAtThird"/>

                    </LinearLayout>

                    <RadioGroup
                        style="@style/RadioGroupOptionSetting"
                        android:id="@+id/rGroupThird">

                        <!-- https://stackoverflow.com/a/38681216 -->
                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnFirstAtThird"
                            android:text="@string/numberFirst"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnSecondAtThird"
                            android:text="@string/numberSecond"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnThirdAtThird"
                            android:text="@string/numberThird"/>

                        <RadioButton
                            style="@style/RadioButtonOptionSetting"
                            android:id="@+id/rBtnFourthAtThird"
                            android:text="@string/numberFourth"/>

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>