<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentRandomPattern"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:weightSum="10"
    android:id="@+id/layoutBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="80dp"
                android:layout_weight="2.5"
                android:orientation="vertical"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/finalPassword"
                    android:textSize="15sp"
                    android:textColor="@color/description"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/layoutPassword">

                    <ScrollView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:fillViewport="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/layoutPasswordScroll">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvPassword"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                android:paddingBottom="5dp"/>

                        </LinearLayout>

                    </ScrollView>

                    <ImageView
                        style="@style/ImageButtons"
                        android:id="@+id/btnCopy"
                        android:src="@drawable/avd_copy"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/MyUnderline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.35"
                android:minHeight="75dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/phrase"
                    android:textSize="15sp"
                    android:textColor="@color/description"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/etPhrase"
                        android:hint="@string/phraseHint"
                        android:textColorHint="@color/lightGray"
                        android:textColor="@color/white"
                        android:background="@null"/>

                    <ImageView
                        style="@style/ImageButtons"
                        android:layout_height="match_parent"
                        android:id="@+id/btnDelete"
                        android:src="@drawable/avd_delete"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/MyUnderline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    style="@style/MySwitchStyle"
                    android:id="@+id/sLetter"
                    android:theme="@style/MySwitch"
                    android:text="@string/letter"/>

                <LinearLayout
                    style="@style/MyUnderline"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    style="@style/MySwitchStyle"
                    android:id="@+id/sCapLetter"
                    android:theme="@style/MySwitch"
                    android:text="@string/capLetter"/>

                <LinearLayout
                    style="@style/MyUnderline"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    style="@style/MySwitchStyle"
                    android:id="@+id/sNumber"
                    android:theme="@style/MySwitch"
                    android:text="@string/number"/>

                <LinearLayout
                    style="@style/MyUnderline"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    style="@style/MySwitchStyle"
                    android:id="@+id/sSymbol"
                    android:theme="@style/MySwitch"
                    android:text="@string/symbol"/>

            </LinearLayout>

            <LinearLayout
                style="@style/MyUnderline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.35"
                android:minHeight="75dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20sp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/patternExample"
                        android:textColor="@color/description"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/tvPattern"
                        android:layout_weight="1"
                        android:textColor="@color/lightGray"
                        android:text="@string/emptyPattern"
                        android:textSize="25sp"
                        android:gravity="center_vertical"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:id="@+id/btnSavePattern"
                        android:layout_gravity="bottom"
                        android:src="@drawable/avd_save"
                        android:padding="7dp"
                        android:visibility="invisible"/>

                    <ImageView
                        style="@style/ImageButtons"
                        android:layout_height="match_parent"
                        android:id="@+id/btnNewRandomPattern"
                        android:layout_gravity="bottom"
                        android:src="@drawable/avd_refresh"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>